@@ -801,7 +801,6 @@ This file is generated automagicaly by gen_known_bugs.pl script.
 </tr>
     </table>
     <p><b>Priority Colors:</b></p>
-    <br />
     <table border="0">
       <tr>
         <td bgcolor="#dadada">1</td>
@@ -816,4 +815,5 @@ This file is generated automagicaly by gen_known_bugs.pl script.
       </tr>
     </table>
   </body>
+<p><b>Number of open bugs: 97</b></p>
 </html>
